--- a/nginx.conf
+++ b/nginx.conf
@@ -44,7 +44,7 @@ server {
 #Redirect Port 80
 server {
     listen       80;
-    server_name InsertIPAddressHere InsertDnsNameHere;
+    #server_name InsertIPAddressHere InsertDnsNameHere;
     return 301 https://$host$request_uri;
 }
 
@@ -53,7 +53,7 @@ server {
     
 #Insert Information for your IP Address and DNS Name below or you will be blocked when trying to access the server
     
-    server_name InsertIPAddressHere InsertDnsNameHere;
+    # server_name InsertIPAddressHere InsertDnsNameHere;
 
 #SSL Configuration
     ssl_certificate /etc/nginx/nginx-selfsigned.crt;
@@ -61,13 +61,9 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;    
     ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
     ssl_prefer_server_ciphers on;
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    ssl_session_tickets off;
-
-#Rate Limiting
-    limit_req zone=ratelimit burst=10 nodelay;
-    limit_conn limitperip 10;
+    # ssl_stapling on;
+    # ssl_stapling_verify on;
+    # ssl_session_tickets off;
 
 #Information Disclosure Mitigation
     server_tokens        off;
@@ -85,24 +81,10 @@ server {
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
     add_header X-Xss-Protection "1; mode=block";
-    add_header Content-Security-Policy "default-src 'self'";
+    # add_header Content-Security-Policy "default-src 'self'";
     add_header Referrer-Policy "no-referrer";
     add_header Strict-Transport-Security "max-age=15768000;";
 
-#Restrict HTTP Methods
-    if ($request_method !~ ^(GET|HEAD|POST)$) {
-    	return 444;
-        }
-
-#In order to add Public Key Pinning insert the hashes of the below configuration in the parameters below
-#   add_header Public-Key-Pins 'pin-sha256="base64+primary==InsertPrimaryCertificateSHA256FingerPrintHere"; pin-sha256="base64+backup==InsertBackupCertificateSHA256FingerPrintHere"; max-age=5184000;
-
-#   Change the below allow parameter IP Address and uncomment both the allow and deny command in order to setup IP based restrictions.
-#   allow 10.0.07;
-#   deny all;
-
-#Restrict hidden files
-    location ~ /\.  { deny all; return 404; }
 
 #Standard Web Config
     location / {
@@ -110,17 +92,6 @@ server {
         index  index.html index.htm;
     }
 
-
-    # redirect server error pages to the static page /50x.html
-    error_page   500 502 503 504  /500err.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }   
-    # redirect client error pages to the static page /40x.html. This may require additional error codes be added.
-    error_page   400 401 402 403 404 405 418 /40x.html;
-    location = /40x.html {
-        root   /usr/share/nginx/html;
-    }
-
 }
+
 }
